--- a/public/views/downloads.html
+++ b/public/views/downloads.html
@@ -1,17 +1,21 @@
-  <h1>download</h1>
+  <h1>Download</h1>
 	<div>
 
-    <md-input-container>
-      <label>Name</label>
-      <input type="text" ng-model="formData.name">
-    </md-input-container>
+    <div layout="row" layout-align="space-around center">
+      <md-input-container flex>
+        <label>Name</label>
+        <input type="text" ng-model="formData.name">
+      </md-input-container>
+      <div flex></div>
+      <md-input-container flex>
+        <label>Url</label>
+        <input type="text" ng-model="formData.url">
+      </md-input-container>
+    </div>
 
-    <md-input-container>
-      <label>Url</label>
-      <input type="text" ng-model="formData.url">
-    </md-input-container>
-
-    <md-button class="md-raised" aria-label="createTorrents" data-ng-click="createTorrents()">Download</md-button>
+    <div layout="row" layout-align="space-around center">
+      <md-button class="md-raised" aria-label="createTorrents" data-ng-click="createTorrents()">Download</md-button>
+    </div>
 
     <div ng-repeat="torrent in torrents track by $index">
       <line data-torrent="torrent"></line>
